--- a/index.html
+++ b/index.html
@@ -1,8 +1,49 @@
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+      <title>Little Bird Toy Shop</title>
+   </style>
+</head>
+<body>
+     <!-- Nav start -->
+  <div class="sticky-top">
+    <nav class="navbar navbar-expand-lg navbar navbar" style="background-color: transparent; data-bs-theme=" dark">
+      <div class="container-fluid">
+        <button id="logo"> <a class="navbar-brand" href="index.html"> <img class="logo" src="The Ton.png"></a>
+        </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="menus.html">Reviews</a>
+            </li>
 
-vjhkjhv
-sdfsdfsdf
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="shop.html">Shop</a>
+            </li>
+          </ul>
+          </li>
+        </div>
+      </div>
+    </nav>
+    <!-- sticky nav end-->
+  </div>
+  <!-- Nav end -->
+   <div class="title">
+       <h1>Little Bird Toy Shop</h1>
+   </div>
 
 
 
-mike change
-sophie change
