--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
    </style>
 </head>
 <body>
+
+
+  DELETE THIS 
+
+  
      <!-- Nav start -->
   <div class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar navbar" style="background-color: transparent; data-bs-theme=" dark">
