--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 
   DELETE THIS 
+NO YOU DELETE IT
 
-  
      <!-- Nav start -->
   <div class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar navbar" style="background-color: transparent; data-bs-theme=" dark">
