--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
       <title>Little Bird Toy Shop</title>
    </style>
 </head>
-<body>
+<body>a
 
-sfdfsadfasdf 
-  DELETE THIS 
-NO YOU DELETE IT
-NO!
-YES!
 
-NO!
-kjgdfkhgsdfsdf
 
      <!-- Nav start -->
   <div class="sticky-top">
