landing page done: just have to fix train

--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" type="text/css" href="style.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-   </style>
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <!-- sticky nav end-->
+  <div class="nav">
+    <!-- sticky nav content -->
   </div>
-  <!-- Nav end -->
-   <div class="title">
-       <h1>Little Bird Toy Shop</h1>
-</div>
+  <div class="title">
+    <h1><a href="/" class="logo-link"><img src="logo.png" alt="Little Bird Toy Shop Logo" class="logo"></a></h1>
+  </div>
+  <div class="marquee">
+    <marquee behavior="scroll" direction="right" scrollamount="10">
+      <img src="plane.png" alt="Train">
+      <img src="car.png" alt="Car">
+      <img src="train.png" class="train" alt="Train">
+    </marquee>
+  </div>
+</body>
+</html>
