--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" type="text/css" href="nav.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
@@ -13,13 +14,14 @@
     <!-- sticky nav content -->
   </div>
   <div class="title">
-    <h1><a href="/" class="logo-link"><img src="logo.png" alt="Little Bird Toy Shop Logo" class="logo"></a></h1>
+   <a href="home.html"><img class="logo-link" src="logo.png" alt="Little Bird Toy Shop Logo"></a>
+   <h1 class="fonts">Little Bird Toy Shop</h1>
   </div>
   <div class="marquee">
-    <marquee behavior="scroll" direction="right" scrollamount="10">
-      <img src="plane.png" alt="Train">
-      <img src="car.png" alt="Car">
-      <img src="train.png" class="train" alt="Train">
+    <marquee behavior="scroll" direction="right" scrollamount="10" class="pics">
+    <img src="plane.png" alt="plane" >
+      <img src="car3.png" alt="Car" class="car">
+      <img src="train.png" class="train" alt="Train" >
     </marquee>
   </div>
 </body>
