--- a/home.html
+++ b/home.html
@@ -1,22 +1,63 @@
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <div class="bg-white dark:bg-zinc-800 text-zinc-800 dark:text-white min-h-screen flex flex-col">
-    <nav class="flex justify-end p-4">
-        <a href="#" class="text-zinc-800 dark:text-white mr-4">Home</a>
-        <a href="#" class="text-zinc-800 dark:text-white">Shop</a>
-    </nav>
-    <header class="flex-1 flex flex-col items-center justify-center">
-        <h1 class="text-4xl text-orange">Little Bird Homemade Toys</h1>
-        <p class="text-sm text-zinc-700 dark:text-zinc-300">Handcrafted with love</p>
-    </header>
-    <footer class="p-4 text-sm text-zinc-600 dark:text-zinc-400 text-center">
-        &copy; 2023 Little Bird Homemade Toys. All rights reserved.
-    </footer>
+<!doctype html>
+<html lang="en">
+    <head>
+        <title>Little Bird Toy ShopS</title>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+
+        <!-- Bootstrap CSS v5.3.2-->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="nav.css" />
+        <link rel="stylesheet" href="shop.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Teachers:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+
+    </head>
+    <body>
+<!-- Nav start -->
+<div class="sticky-top">
+  <nav class="navbar navbar-expand-lg navbar navbar" style="background-color: transparent; data-bs-theme=" dark">
+    <div class="container-fluid">
+      <button id="logo"> <a class="navbar-brand" href="index.html"></a>
+      </button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="Reviews.html">Reviews</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="shop.html">Shop</a>
+          </li>
+        </ul>
+        </li>
+      </div>
+    </div>
+  </nav>
+  <!-- sticky nav end-->
 </div>
-  </body>
-</html>
+<!-- Nav end -->
+
+
+ <!-- Do Not Touch -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+ integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+ crossorigin="anonymous"></script>
+</body>
