--- a/home.html
+++ b/home.html
@@ -16,6 +16,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Teachers:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tulpen+One&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -52,18 +55,48 @@
 
 
  
-  <main class="flex flex-col md:flex-row items-center justify-center p-4 space-y-4 md:space-y-0 md:space-x-4">
-    <div class="flex flex-col space-y-4">
-      <div class="bg-zinc-300 w-48 h-48"><img class="image" src="block.png"></div>
-      
-    </div>
-    
-    <div class="max-w-md mike text-zinc-900 dark:text-white">
-      <p class="text">Our Story: Little Bird Toys, established in 2018, brings families handcrafted wooden toys designed to spark imagination and slow down playtime. Our heirloom-quality collection is built from sustainable materials and made to last a lifetime, fostering connections between generations.</p>
-    </div>
-  </main>
+<div class="content-container">
+  <div class="image-container">
+    <img class="image" src="block.png" alt="Wooden toy block">
+  </div>
+  <div class="text-container">
+    <p>Our Story: Little Bird Toys, established in 2018, brings families handcrafted wooden toys designed to spark imagination and slow down playtime. Our heirloom-quality collection is built from sustainable materials and made to last a lifetime, fostering connections between generations.</p>
+  </div>
 </div>
+<div class="content-container reverse">
+  <div class="text-container">
+    <p>Quality: We believe in the power of simple, safe play. Our handcrafted toys are free from plastic and batteries, and made with sustainable Baltic birch wood. Each piece is meticulously crafted and rigorously tested in our Toms River, NJ workshop to meet the highest safety standards (ASTM & CA-Prop 65) and ensure unmatched durability.
+    </p>
+  </div>
+  <div class="image-container">
+    <img class="image" src="block22.png" alt="Wooden toy block">
+  </div>
+</div>
+
+<div class="content-container">
+  <div class="image-container">
+    <img class="image" src="block3.png" alt="Wooden toy block">
+  </div>
+  <div class="text-container">
+    <p>Sustainability: At Little Bird Toys, we are committed to eco-friendly practices. Our wooden toys are designed for longevity, and our manufacturing process minimizes waste and supports the US economy.
+    </p>
+  </div>
+</div>
+
+<div class="content-container reverse">
+  <div class="text-container">
+    <p>Visit Us: Become part of the Little Bird Toys family! We love interacting with our customers and sharing the joy of our handcrafted toys. Visit our Toms River, NJ store to explore our charming play space and meet the team behind the magic.
+    </p>
+  </div>
+  <div class="image-container">
+    <img class="image" src="block.png" alt="Wooden toy block">
+  </div>
+</div>
+
+<iframe class="map"   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d779176.6152579268!2d-74.33749284824711!3d40.28333223455531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3cd48be321f7f%3A0xb6371e8a9a51b508!2sLearning%20Express%20Toys!5e0!3m2!1sen!2sus!4v1718218207021!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+ 
   </body>
+  
 </html>
 
  <!-- Do Not Touch -->
